--- a/soluna-mobile/ios/Soluna.xcodeproj/xcshareddata/xcschemes/Soluna.xcscheme
+++ b/soluna-mobile/ios/Soluna.xcodeproj/xcshareddata/xcschemes/Soluna.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1030"
+   LastUpgradeVersion = "1130"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "467F62C922F3D24100671C72"
                BuildableName = "Soluna.app"
                BlueprintName = "Soluna"
-               ReferencedContainer = "container:Shared.xcodeproj">
+               ReferencedContainer = "container:Soluna.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,38 +28,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "467F62DC22F3D24200671C72"
-               BuildableName = "SolunaTests.xctest"
-               BlueprintName = "SolunaTests"
-               ReferencedContainer = "container:Shared.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "467F62E722F3D24200671C72"
-               BuildableName = "SolunaUITests.xctest"
-               BlueprintName = "SolunaUITests"
-               ReferencedContainer = "container:Shared.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "467F62C922F3D24100671C72"
-            BuildableName = "Soluna.app"
-            BlueprintName = "Soluna"
-            ReferencedContainer = "container:Shared.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -78,11 +47,9 @@
             BlueprintIdentifier = "467F62C922F3D24100671C72"
             BuildableName = "Soluna.app"
             BlueprintName = "Soluna"
-            ReferencedContainer = "container:Shared.xcodeproj">
+            ReferencedContainer = "container:Soluna.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -97,7 +64,7 @@
             BlueprintIdentifier = "467F62C922F3D24100671C72"
             BuildableName = "Soluna.app"
             BlueprintName = "Soluna"
-            ReferencedContainer = "container:Shared.xcodeproj">
+            ReferencedContainer = "container:Soluna.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
