Use Koin for dependency injection
Includes new koinTest module for checkmodules test case which runs as part of shared tests on Android and is controlled from Swift for the iOS side.

--- a/soluna-mobile/ios/Soluna.xcodeproj/xcshareddata/xcschemes/Soluna.xcscheme
+++ b/soluna-mobile/ios/Soluna.xcodeproj/xcshareddata/xcschemes/Soluna.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "467F62DC22F3D24200671C72"
+               BuildableName = "SolunaTests.xctest"
+               BlueprintName = "SolunaTests"
+               ReferencedContainer = "container:Soluna.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
