--- a/soluna-mobile/android/src/main/AndroidManifest.xml
+++ b/soluna-mobile/android/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.russhwolf.soluna.android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".SolunaApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.NoActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name=".SolunaActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
