--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,40 +1,40 @@
 [versions]
-kotlin = "1.5.31"
+kotlin = "1.9.20"
 
-buildKonfig = "0.10.2"
-desugar = "1.1.5"
-islandTime = "0.6.2"
+buildKonfig = "0.15.0"
+desugar = "2.0.4"
+islandTime = "0.6.3"
 junit = "4.13.2"
-koin = "3.1.2"
-ktor = "1.6.4"
-playServicesLocation = "18.0.0"
-robolectric = "4.6.1"
-settings = "0.8.1"
-sqlDelight = "1.5.2"
-stately = "1.1.10"
-turbine = "0.6.1"
+koin = "3.5.0"
+ktor = "2.3.6"
+playServicesLocation = "21.0.1"
+robolectric = "4.11.1"
+settings = "1.1.1"
+sqlDelight = "2.0.0"
+stately = "2.0.5"
+turbine = "1.0.0"
 
-android-gradle = "7.0.3"
+android-gradle = "8.1.2"
 android-minSdk = "23"
-android-compileSdk = "31"
-android-targetSdk = "31"
+android-compileSdk = "34"
+android-targetSdk = "34"
 
-kotlinx-coroutines = "1.5.2-native-mt"
-kotlinx-coroutines-strict = { strictly = "1.5.2-native-mt" }
-kotlinx-dateTime = "0.3.0"
-kotlinx-serialization = "1.3.0"
+kotlinx-coroutines = "1.7.3"
+kotlinx-dateTime = "0.4.1"
+kotlinx-serialization = "1.6.1"
 
-androidx-activityCompose = "1.3.1"
-androidx-compose = "1.0.4"
-androidx-coreKtx = "1.6.0"
+androidx-activityCompose = "1.8.1"
+androidx-compose = "1.5.4"
+androidx-compose-compiler = "1.5.4"
+androidx-coreKtx = "1.12.0"
 androidx-dataStore = "1.0.0"
-androidx-lifecycle = "2.4.0-rc01"
-androidx-navigationCommon = "2.3.5"
-androidx-navigationCompose = "2.4.0-alpha10"
-androidx-workManager = "2.7.0"
+androidx-lifecycle = "2.6.2"
+androidx-navigationCommon = "2.7.5"
+androidx-navigationCompose = "2.7.5"
+androidx-workManager = "2.8.1"
 
-androidx-test-core = "1.4.0"
-androidx-test-junit = "1.1.3"
+androidx-test-core = "1.5.0"
+androidx-test-junit = "1.1.5"
 
 [libraries]
 desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
@@ -65,7 +65,6 @@ androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version.ref = "a
 kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-dateTime" }
 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
-kotlinx-coroutines-core-strict = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-strict" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinx-coroutines" }
 
@@ -78,18 +77,19 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-workManager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin" }
 
-ktor-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor-ios = { module = "io.ktor:ktor-client-ios", version.ref = "ktor" }
-ktor-json = { module = "io.ktor:ktor-client-json", version.ref = "ktor" }
-ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
-ktor-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
-ktor-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-ios = { module = "io.ktor:ktor-client-ios", version.ref = "ktor" }
+ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
+ktor-client-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 
-sqlDelight-android = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelight" }
-sqlDelight-coroutines = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
-sqlDelight-jvm = { module = "com.squareup.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
-sqlDelight-native = { module = "com.squareup.sqldelight:native-driver", version.ref = "sqlDelight" }
+sqlDelight-android = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelight" }
+sqlDelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
+sqlDelight-jvm = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
+sqlDelight-native = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelight" }
 
 settings-core = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
 settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "settings" }
@@ -115,11 +115,12 @@ kotlinx-serialization-common = [
     "kotlinx-serialization-json",
 ]
 
-ktor-common = [
-    "ktor-core",
-    "ktor-json",
-    "ktor-logging",
-    "ktor-serialization",
+ktor-client-common = [
+    "ktor-client-core",
+    "ktor-client-json",
+    "ktor-client-logging",
+    "ktor-client-serialization",
+    "ktor-client-contentNegotiation",
 ]
 
 settings-common = [
@@ -136,5 +137,5 @@ android-application = { id = "com.android.application", version.ref = "android-g
 
 kotlinx-serialization = { id = "kotlinx-serialization", version.ref = "kotlin" }
 
-sqlDelight = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
+sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 buildKonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildKonfig" }
