--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,42 +1,42 @@
 [versions]
-kotlin = "1.9.20"
+kotlin = "2.0.20"
 
 buildKonfig = "0.15.0"
-desugar = "2.0.4"
-islandTime = "0.6.3"
+desugar = "2.1.2"
+islandTime = "0.7.0"
 junit = "4.13.2"
-koin = "3.5.0"
-ktor = "2.3.6"
-playServicesLocation = "21.0.1"
+koin = "3.5.3"
+ktor = "2.3.12"
+playServicesLocation = "21.3.0"
 robolectric = "4.11.1"
-settings = "1.1.1"
-sqlDelight = "2.0.0"
-stately = "2.0.5"
-turbine = "1.0.0"
+settings = "1.2.0"
+sqlDelight = "2.0.2"
+turbine = "1.1.0"
 
-android-gradle = "8.1.2"
+android-gradle = "8.5.2"
 android-minSdk = "23"
 android-compileSdk = "34"
 android-targetSdk = "34"
 
-kotlinx-coroutines = "1.7.3"
-kotlinx-dateTime = "0.4.1"
-kotlinx-serialization = "1.6.1"
+kotlinx-coroutines = "1.8.1"
+kotlinx-dateTime = "0.6.0"
+kotlinx-serialization = "1.6.3"
 
-androidx-activityCompose = "1.8.1"
-androidx-compose = "1.5.4"
-androidx-compose-compiler = "1.5.4"
-androidx-coreKtx = "1.12.0"
-androidx-dataStore = "1.0.0"
-androidx-lifecycle = "2.6.2"
-androidx-navigationCommon = "2.7.5"
-androidx-navigationCompose = "2.7.5"
-androidx-workManager = "2.8.1"
+androidx-activityCompose = "1.9.2"
+androidx-compose = "1.7.0"
+androidx-coreKtx = "1.13.1"
+androidx-dataStore = "1.1.1"
+androidx-lifecycle = "2.8.5"
+androidx-navigation = "2.8.0"
+androidx-workManager = "2.9.1"
 
-androidx-test-core = "1.5.0"
-androidx-test-junit = "1.1.5"
+androidx-test-core = "1.6.1"
+androidx-test-junit = "1.2.1"
 
 [libraries]
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
+
 desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
 islandTime = { module = "io.islandtime:core", version.ref = "islandTime" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -48,8 +48,8 @@ androidx-activityCompose = { module = "androidx.activity:activity-compose", vers
 androidx-coreKtx = { module = "androidx.core:core-ktx", version.ref = "androidx-coreKtx" }
 androidx-dataStore = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx-dataStore" }
 androidx-lifecycleRuntime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
-androidx-navigationCommon = { module = "androidx.navigation:navigation-common", version.ref = "androidx-navigationCommon" }
-androidx-navigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigationCompose" }
+androidx-navigationCommon = { module = "androidx.navigation:navigation-common", version.ref = "androidx-navigation" }
+androidx-navigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 androidx-workManager = { module = "androidx.work:work-runtime-ktx", version.ref = "androidx-workManager" }
 
 androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
@@ -96,8 +96,6 @@ settings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutine
 settings-dataStore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "settings" }
 settings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "settings" }
 
-stately-core = { module = "co.touchlab:stately-common", version.ref = "stately" }
-
 [bundles]
 androidx-compose = [
     "androidx-activityCompose",
@@ -131,11 +129,14 @@ settings-common = [
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 android-library = { id = "com.android.library", version.ref = "android-gradle" }
 android-application = { id = "com.android.application", version.ref = "android-gradle" }
 
-kotlinx-serialization = { id = "kotlinx-serialization", version.ref = "kotlin" }
 
 sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 buildKonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildKonfig" }
