--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ islandTime = "0.7.0"
 junit = "4.13.2"
 koin = "3.5.3"
 ktor = "2.3.12"
+molecule = "2.0.0"
 playServicesLocation = "21.3.0"
 robolectric = "4.11.1"
 settings = "1.2.0"
@@ -42,6 +43,7 @@ kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version
 desugar = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar" }
 islandTime = { module = "io.islandtime:core", version.ref = "islandTime" }
 junit = { module = "junit:junit", version.ref = "junit" }
+molecule = { module = "app.cash.molecule:molecule-runtime", version.ref = "molecule" }
 playServicesLocation = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
@@ -67,6 +69,7 @@ androidx-test-junit = { module = "androidx.test.ext:junit-ktx", version.ref = "a
 kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-dateTime" }
 
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-playServices = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinx-coroutines" }
 
